style: Minor grammar correction and readability change

--- a/style.css
+++ b/style.css
@@ -14,7 +14,17 @@
   width: 200px;
 }
 
-div{
+.food-photo {
+  display:block;
+  border: 5px solid gray;
+  margin-left: auto;
+  margin-right: auto;
+  height: 300px;
+  width: 200px;
+}
+
+
+div {
   text-align: center;
 
 }
@@ -22,23 +32,37 @@ div{
 div h1{
   margin-top: 20px;
   margin-bottom: 30px;
+  font-size: 3rem;
 }
 
 div p{
   font-weight: bolder;
   padding-top: 10px;
   margin-top: 20px;
+  font-size: 1.5rem;
 }
 
 div ul{
   display: inline-block;
   text-align: left;
-  margin-top: 16px;
+  margin-top: 1rem;
+  font-size: 1.25rem;
+}
+
+div ol{
+  display: inline-block;
+  text-align: left;
+  margin-top: 1rem;
+  font-size: 1.25rem;
+}
+
+li {
+  padding-bottom: 1rem;
 }
 
 div footer {
   position: absolute;
   width: 100%;
-  bottom: 0;
-  
+  bottom: .5rem;
+  font-size: 1.25rem;
 }
